fix: improve styling to visually align better with original

--- a/src/scss/_data-info-box.scss
+++ b/src/scss/_data-info-box.scss
@@ -41,10 +41,16 @@
   }
 
   &-header > h2 {
+    margin: 0;
     font-size: $data-info-box-header-font-size;
   }
 
+  &-body {
+    min-height: 150px;
+  }
+
   &-description {
+
     // line clamp
     display: -webkit-box;
     -webkit-box-orient: vertical;
